# TheHedgehog

./: .env.example  .gitignore  Cargo.toml  INSTALL.txt  LICENSE  README.md  THIRD-PARTY-LICENSES.html  about.hbs  about.toml  dist-workspace.toml  obsidian-merge-phase-2-plugin-plan.md  obsidian-merge-smoke-test-plan.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  chore.yml  config.yml  feature.yml
FIPs/: FIP-0001.md  FIP-0002.md
assets/: THIRD-PARTY-LICENSES.md  dag-bundle.html  dag.html
docs/: 51folds-revert-bug-report.md  GH-Actions-Plan.md  HANDOFF-next-guy.md  README.md  audit-2026-04-02.html  audit-2026-04-02.md  uncle-bob-plan1.md
docs/adr/: 0001-performance-improvements.md  0001-pure-rust-egui-free-daily-data.md  0002-grouped-macro-monitor.md  0002-price-panel-ux.md  0003-collapsible-chart-panels.md  0003-real-data-first-and-dynamic-overlays.md  0004-design-system-colour-palette.md  0004-performance-caching-interactive-charts-and-multi-provider.md  0005-rag-ai-analysis-panel.md  0006-inference-persistence-and-reports.md  0007-rollback-tabs-dexter-focus-51folds.md  0008-51folds-integration.md  0009-strengthen-hypothesis-quality-and-fix-openai-tool-compatibility.md  0010-multi-provider-commodity-caching.md  0011-single-provider-daily-cache.md  0012-analysis-quality-folds-persistence-and-editor-consolidation.md  0013-sdk-integration-model-explorer-ui.md  0014-model-explorer-navigation-stack-ui-redesign.md  0015-dark-theme-hardening-and-51folds-ui-polish.md  0016-splash-screen-revert-architecture-and-51folds-patch-drift.md  0017-commodity-bias-eval-and-cross-model-judge.md  0018-dag-visualization-wry-d3-webview.md  0019-dexter-51folds-integration-and-inline-report.md  0020-fanning-out-51folds-model-builds-concurrent-tray.md  0021-instrument-set-reduction-bitcoin-into-monetary.md  0022-primary-secondary-tertiary-prompt-framework.md  0023-51folds-refresh-retry-server-status.md  0024-51folds-tab-browser-landing-and-context-aware-sidebar.md  0025-obsidian-merge-roundtrip-smoke-test.md  README.md
docs/audits/: 2026-04-03-security-and-performance.md
docs/published/: announcement.md  dexter-repo-message.md
docs/research/: rolling-decision-log.md
docs/specs/: 51folds-integration.md  v1-dashboard.md  v2-grouped-macro-monitor.md
docs/vendor-integrations/: dexter.md
src/: ai.rs  analysis.rs  app.rs  dag.rs  eval.rs  folds.rs  help.rs  knowledge.rs  main.rs  models.rs  providers.rs  storage.rs
src/app/: dialogs.rs  inference_label.rs  model_browser.rs  sidebar.rs  tasks.rs  theme.rs  theme_cards.rs  theme_list.rs  util.rs  views.rs
src/obsidian/: base.rs  canvas.rs  driver.rs  history.rs  merge.rs  mermaid.rs  mod.rs  names.rs  outcome.rs  overview.rs  snapshot.rs  source.rs  user_guide.rs  vault.rs
