[package]
name = "the-hedgehog"
version = "0.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
eframe = "0.31"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
egui_commonmark = "0.20"
uuid = { version = "1", features = ["v4"] }
fiftyone-folds = { path = "vendor/fiftyone-folds" }
tokio = { version = "1", features = ["rt", "time"] }
