[package]
name = "the-hedgehog"
version = "0.1.0-preview.1"
edition = "2024"
description = "Causal, probabilistic monitoring of capital-markets regime shifts"
repository = "https://github.com/cyclomaticsegal/TheHedgehog"
license = "LicenseRef-AllRightsReserved"

[dependencies]
anyhow = "1.0"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
eframe = "0.31"
image = { version = "0.25", default-features = false, features = ["png"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
egui_commonmark = "0.20"
uuid = { version = "1", features = ["v4"] }
fiftyone-folds = { path = "vendor/fiftyone-folds" }
tokio = { version = "1", features = ["rt", "time"] }
egui_term = "0.1.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
