[package]
name = "the-hedgehog"
version = "0.1.0-preview.1"
edition = "2024"
description = "Causal, probabilistic monitoring of capital-markets regime shifts"
repository = "https://github.com/cyclomaticsegal/TheHedgehog"
license = "MIT"
publish = false

[dependencies]
anyhow = "1.0"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
eframe = "0.31"
image = { version = "0.25", default-features = false, features = ["png"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
egui_commonmark = "0.20"
uuid = { version = "1", features = ["v4"] }
fiftyone-folds = { path = "vendor/fiftyone-folds" }
tokio = { version = "1", features = ["rt", "time"] }
egui_term = "0.1.0"
wry = "0.55"
raw-window-handle = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
rfd = "0.15"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
